--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
   background-size: 50px 50px;
   position: relative;
   top: 150px;
+  left: 50px;
 }
 #dog {
   width: 50px;
@@ -21,11 +22,11 @@
   position: relative;
   top: 100px;
   left: 550px;
-  animation: dogMov 2.5s infinite linear;
+  animation: dogMov 2s infinite linear;
 }
 @keyframes dogMov {
   0% {
-    left: 580px;
+    left: 580px; 
   }
   100% {
     left: -20px
@@ -33,22 +34,40 @@
 }
 
 .jump {
-  animation: jump 1s linear;
+  animation: jump 0.3s linear;
 }
 @keyframes jump {
   0% {
     top: 150px;
   }
-  30% {
-    top: 130px;
+  10% {
+    top: 120px;
   }
+  20% {
+    top: 100px;
+  }
+  30% {
+    top: 80px;
+  } 
+  40% {
+    top: 60px;
+  }           
   50% {
+    top: 50px;
+  }
+  60% {
+    top: 60px;
+  }
+  70% {
     top: 80px;
   }
   80% {
-    top: 130px;
+    top: 90px;
+  }
+  90% {
+    top: 100px;
   }
   100% {
-    top: 150px;
+    top: 120px;
   }
 }
