--- a/style.css
+++ b/style.css
@@ -1,15 +1,16 @@
 .game {
   width: 600px;
-  height: 200px;
+  height: 300px;
   border-bottom: 1px solid #000;
   margin: auto;
+  background: url(png/bg_02_h.png);
 }
 
 #cat {
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   background-image: url(png/cat.png);
-  background-size: 50px 50px;
+  background-size: 40px 40px;
   position: relative;
   top: 150px;
   left: 50px;
